src/objects/Reto_tecnologia__c.object
<CustomObject>
    <fields>
        <fullName>Lista_de_Soluciones__c</fullName>
        <label>Lista de Soluciones</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conectividad</fullName>
                </value>
                <value>
                    <fullName>Movilidad</fullName>
                </value>
                <value>
                    <fullName>Virtualización y Computación en modo Opex</fullName>
                </value>
                <value>
                    <fullName>Internet de las Cosas/Control de Objetos</fullName>
                </value>
                <value>
                    <fullName>Omnicanalidad</fullName>
                </value>
                <value>
                    <fullName>Digital WorkPlace (Puesto de Trabajo Digital)</fullName>
                </value>
                <value>
                    <fullName>Seguridad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nivel_de_Desarrollo__c</fullName>
        <label>Nivel de Desarrollo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disponible</fullName>
                </value>
                <value>
                    <fullName>En Desarrollo</fullName>
                </value>
                <value>
                    <fullName>No Disponible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Observaci_n_sobre_el_producto__c</fullName>
        <label>Observación sobre el producto</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Otra_Solucion__c</fullName>
        <label>Otra Solucion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reto__c</fullName>
        <label>Reto</label>
        <referenceTo>Reto__c</referenceTo>
        <relationshipLabel>Reto tecnologias</relationshipLabel>
        <relationshipName>Reto_tecnologias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Reto tecnologia</label>
    <nameField>
        <label>Nombre de Reto tecnologias</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reto tecnologias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>